tests-integration/tests/roundtrip/invalid/syntax/missing_token/01/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax_errors/missing_token/input.essence:1:5:
  |
1 | find: bool
  |     ^
Missing <identifier>

